bad change to master

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <h2>Index on Master</h2>
     <div>
       <ul>
-        <li class="list-items">Item 1</li>
+        <li class="list-items">Item changed 1</li>
         <li class="list-items">Item 2</li>
-        <li class="list-items">Item 3</li>
+        <li class="list-items">Item changed 3</li>
         <li class="list-items">Item 4</li>
         <li class="list-items">Item 5</li>
       </ul>
